--- a/src/Domain/project.json
+++ b/src/Domain/project.json
@@ -1,17 +1,23 @@
 {
-  "version": "1.0.0-*",
+    "version": "1.0.0-*",
 
-  "dependencies": {
-    "NETStandard.Library": "1.6.0"
-  },
+    "dependencies": {
+        "Microsoft.NETCore.App": {
+            "version": "1.0.0",
+            "type": "platform"
+        }
+    },
 
-  "frameworks": {
-    "netstandard1.6": {
-      "imports": "dnxcore50"
+    "frameworks": {
+        "netcoreapp1.0": {
+            "imports": [
+                "dotnet5.6",
+                "portable-net45+win8"
+            ]
+        }
+    },
+
+    "tooling": {
+        "defaultNamespace": "SalesPortal.Core"
     }
-  },
-
-  "tooling": {
-    "defaultNamespace": "SalesPortal.Core"
-  }
 }
