--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,14 @@
-version: '1.0.{build}'
-configuration:
-- Debug
-- Release
-platform: Any CPU
-environment:
-  # Don't report back to the mothership
-  DOTNET_CLI_TELEMETRY_OPTOUT: 1
-init:
-- ps: $Env:LABEL = "CI" + $Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
-before_build:
-- appveyor-retry dotnet restore -v Minimal
-build_script:
-- dotnet build "src\Domain" -c %CONFIGURATION% --no-dependencies --version-suffix %LABEL%
-after_build:
-- dotnet pack "src\Domain" -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o artifacts
-test_script:
-- dotnet test "test\Domain.Tests" -c %CONFIGURATION%
+version: '{build}'  
+pull_requests:  
+  do_not_increment_build_number: true
+branches:  
+  only:
+  - master
+nuget:  
+  disable_publish_on_pr: true
+build_script:  
+- ps: .\Build.ps1
+test: off
+artifacts:  
+- path: .\artifacts\**\*.nupkg
+  name: NuGet
