--- a/src/Domain/project.json
+++ b/src/Domain/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "dependencies": {
     "Dapper": "1.50.2",
@@ -6,7 +6,8 @@
       "version": "1.0.1",
       "type": "platform"
     },
-    "Npgsql": "3.1.8"
+    "Npgsql": "3.1.8",
+    "System.Runtime.Serialization.Primitives": "4.1.1"
   },
   "frameworks": {
     "netcoreapp1.0": {
